--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
     />
     <title>Speed‑Sensitive Waterfall Gallery</title>
-    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="./global.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
